examples/passing/health-check-configured/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: partner-api-route
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /partner-api
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: partner-api-upstream
          port: 443
